--- a/louis.rmd
+++ b/louis.rmd
@@ -7,7 +7,12 @@ The [R plugin](https://www.jetbrains.com/help/pycharm/r-plugin-support.html) for
 handy capabilities to work with the [R Markdown](https://www.jetbrains.com/help/pycharm/r-markdown.html) files.
 To [add](https://www.jetbrains.com/help/pycharm/r-markdown.html#add-code-chunk) a new R chunk,
 ```{r}
+# install.packages("GGally")
+# install.packages("car")
 library(tidyverse)
+library(car)
+library(GGally)
+library(caret)
 # contains:
 # ggplot2: For data visualization.
 # dplyr: For data manipulation.
@@ -25,7 +30,7 @@ data <- read_csv("savant_data.csv",
                          "pitch_type",
                          "release_speed",
                          # "release_pos_x", "release_pos_z",
-                         "release_extension",
+                         # "release_extension",
                          "release_spin_rate", "pfx_x", "pfx_z", "p_throws",
                          # "spin_axis",
                          "delta_run_exp"
@@ -33,10 +38,6 @@ data <- read_csv("savant_data.csv",
                  )
 names(data)[1] <- "pitch_type"
 
-y <- data$delta_run_exp
-# select the columns of interest
-X <- data[, names(data) != "delta_run_exp"]
-colnames(X)
 ```
 ```{r}
 # Create dummy variables for p_throws and pitch_type if not already present
@@ -45,28 +46,81 @@ data <- data %>%
            pitch_type %in% c("FF", "SI", "FC") ~ "fastball",
            pitch_type %in% c("SL", "ST", "SV", "CU", "KC", "CS", "KN") ~ "breaking",
            pitch_type %in% c("CH", "FS", "FO", "SC") ~ "offspeed",
-           TRUE ~ NULL
+           TRUE ~ "other"
           )) %>%
-    filter(!is.null(pitch_type))
+    filter(pitch_type != "other")
+
+data <- na.omit(data)
 ```
 ```{r}
 dummies <- dummyVars(~ p_throws + pitch_type, data = data)
-one_hot_encoded_data <- predict(dummies, newdata = X)
+one_hot_encoded_data <- predict(dummies, newdata = data)
 
 one_hot_encoded_data <- as.data.frame(one_hot_encoded_data)
-X <- data[, !names(data) %in% c("p_throws", "pitch_type")]
+X <- data[, !names(data) %in% c("p_throws", "pitch_type", "delta_run_exp")]
 X <- cbind(X, one_hot_encoded_data)
+X <- X[, !names(X) %in% c("p_throwsR", "pitch_typefastball")]
+
+y <- data$delta_run_exp
 ```
 position the caret at any line or the code chunk, then click "+".
 
 The code chunk appears:
 ```{r}
+# ggpairs(data)
 ```
 
-Type any R code in the chunk, for example:
 ```{r}
-summary(lm(y ~ ., data = X))
+pitch_proportions <- data %>%
+  group_by(pitch_type) %>%
+  summarise(count = n()) %>%
+  mutate(proportion = count / sum(count))
+
+# Plot the proportions
+ggplot(pitch_proportions, aes(x = pitch_type, y = proportion, fill = pitch_type)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Proportions of Each Pitch Type", x = "Pitch Type", y = "Proportion") +
+  theme_minimal()
+```
+```{r}
+
+```
+```{r}
+
+```
+```{r}
+
+```
+```{r}
+
+```
+```{r}
+model <- lm(y ~ ., data = X)
+summary(model)
+```
+```{r}
+fitted <- fitted(model)
+resid <- resid(model)
+
+plot(resid ~ fitted, xlab = "Fitted values", ylab = "Residuals", main = "Residuals vs Fitted")
+```
+```{r}
+qqnorm(resid)
+qqline(resid)
+```
+```{r}
+plot(resid ~ X$release_speed, xlab = "Release Speed", ylab = "Residuals", main = "Residuals vs Release Speed")
+plot(resid ~ X$pfx_x, xlab = "PFX X", ylab = "Residuals", main = "Residuals vs PFX X")
+plot(resid ~ X$pfx_z, xlab = "PFX Z", ylab = "Residuals", main = "Residuals vs PFX Z")
+plot(resid ~ X$release_spin_rate, xlab = "Release Spin Rate", ylab = "Residuals", main = "Residuals vs Release Spin Rate")
+
+boxplot(resid ~ X$p_throwsL, xlab = "p_throwsL", ylab = "Residuals", main = "Residuals vs p_throwsL")
+boxplot(resid ~ X$pitch_typebreaking, xlab = "pitch_typebreaking", ylab = "Residuals", main = "Residuals vs pitch_typebreaking")
+boxplot(resid ~ X$pitch_typeoffspeed, xlab = "pitch_typeoffspeed", ylab = "Residuals", main = "Residuals vs pitch_typeoffspeed")
 ```
 
 Now, click the **Run** button on the chunk toolbar to [execute](https://www.jetbrains.com/help/pycharm/r-markdown.html#run-r-code) the chunk code. The result should be placed under the chunk.
+```{r}
+plot(fitted ~ y, xlab = "Fitted values", ylab = "Actual values", main = "Fitted vs Actual")
+```
 Click the **Knit and Open Document** to build and preview an output.kkjk
