--- a/Main.rmd
+++ b/Main.rmd
@@ -85,11 +85,18 @@ RHP_FB0 <- RHP_FB |>
             whiff = mean(whiff),
             count = n(),
             .groups="drop") |>
-     mutate(across(where(is.numeric) & !all_of("count") & !all_of("whiff"), ~ (. - min(.) + 1) / sd(.))) |>
-     filter(162 < count) |>
-     mutate(whiff = log(whiff + 0.001))
+     mutate(across(where(is.numeric) & !all_of("count") & !all_of("whiff"), ~ (. - min(.)) / sd(.))) |>
+     filter(162 < count & release_pos_z > 5) |>
+     mutate(whiff = whiff^(1/3),
+            release_extension = release_extension^(1/2),
+            az = az^(-1/3)
+            )
   
 # remove(RHP_FB) # Cleanup
+```
+
+```{r}
+summary(powerTransform(cbind(RHP_FB0[,4:15])))
 ```
 
 We group by *player_name* and *game_year* as this classification leads to the most self-consistency within samples. *stand* is also included as it is a categorical variable (see below).
@@ -166,10 +173,35 @@ Description
 
 Description
 ```{r}
-boxCox(fb_model)
 ```
 ```{r}
-hist(RHP_FB0$whiff)
+di <- cooks.distance(fb_model)
+cutoff_di <- qf(0.5, 16, 1543)
+print(which(di > cutoff_di))
+
+ri <- rstandard(fb_model)
+print(which(ri > 4 | ri < -4))
+
+hii <- hatvalues(fb_model)
+cutoff_hii <- 2 * (16) / 1559
+which(hii > cutoff_hii)
+
+dffits <- dffits(fb_model)
+cutoff_dffits <- 2 * sqrt(16 / 1559)
+which(abs(dffits) > cutoff_dffits)
+
+dfbetas <- dfbetas(fb_model)
+cutoff_dfbetas <- 7 / sqrt(1559)
+which(abs(dfbetas[,5]) > cutoff_dfbetas)
+print(RHP_FB0[RHP_FB0$release_pos_z < 6,])
+```
+
+
+```{r}
+```
+
+
+```{r}
 hist(RHP_FB0$release_speed)
 hist(RHP_FB0$release_spin_rate)
 hist(RHP_FB0$release_extension)
@@ -279,23 +311,22 @@ Description
 
 Description
 ```{r}
-boxCox(fb_model)
 ```
 
 
 ```{r}
 # Create Box Plots
-boxplot(e_hat ~ RHP_FB0$release_speed, main="Residuals vs Release Speed", xlab="Release Speed", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$release_spin_rate, main="Residuals vs Release Spin Rate", xlab="Release Spin Rate", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$release_extension, main="Residuals vs Release Extension", xlab="Release Extension", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$release_pos_z, main="Residuals vs Release Pos Z", xlab="Release Pos Z", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$release_pos_x, main="Residuals vs Release Pos X", xlab="Release Pos X", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$plate_z, main="Residuals vs Plate Z", xlab="Plate Z", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$plate_x, main="Residuals vs Plate X", xlab="Plate X", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$ax, main="Residuals vs Ax", xlab="Ax", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$az, main="Residuals vs Az", xlab="Az", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$pfx_x, main="Residuals vs Pfx X", xlab="Pfx X", ylab="Residuals")
-boxplot(e_hat ~ RHP_FB0$pfx_z, main="Residuals vs Pfx Z", xlab="Pfx Z", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$release_speed, main="Residuals vs Release Speed", xlab="Release Speed", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$release_spin_rate, main="Residuals vs Release Spin Rate", xlab="Release Spin Rate", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$release_extension, main="Residuals vs Release Extension", xlab="Release Extension", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$release_pos_z, main="Residuals vs Release Pos Z", xlab="Release Pos Z", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$release_pos_x, main="Residuals vs Release Pos X", xlab="Release Pos X", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$plate_z, main="Residuals vs Plate Z", xlab="Plate Z", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$plate_x, main="Residuals vs Plate X", xlab="Plate X", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$ax, main="Residuals vs Ax", xlab="Ax", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$az, main="Residuals vs Az", xlab="Az", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$pfx_x, main="Residuals vs Pfx X", xlab="Pfx X", ylab="Residuals")
+# boxplot(e_hat ~ RHP_FB0$pfx_z, main="Residuals vs Pfx Z", xlab="Pfx Z", ylab="Residuals")
 ```
 
 Description
