--- a/Main.rmd
+++ b/Main.rmd
@@ -148,6 +148,7 @@ create_response_hist <- function(responses){
   #        width = 8, 
   #        height = 6, 
   #        dpi = 300)
+  rm(p_response)
 }
 create_response_hist(responses)
 ```
@@ -215,6 +216,21 @@ create_resid_vs_pred_plot <- function(dataframe, filename, e_hat){
         width = 15, 
         height = 12, 
         dpi = 300)
+  rm(
+    p_resid_rs,
+    p_resid_rsr,
+    p_resid_re,
+    p_resid_rpz,
+    p_resid_rpx,
+    p_resid_pz,
+    p_resid_px,
+    p_resid_az,
+    p_resid_ax,
+    p_resid_pfx_z,
+    p_resid_pfx_x,
+    p_resid_s,
+    combined_plot
+  )
 }
 
 create_resid_vs_pred_plot(RHP_FB0, "residual_plots_RHP.jpg", e_hat)
@@ -239,6 +255,7 @@ create_resid_fitted_plot <- function(y_hat, e_hat){
   #        width = 8, 
   #        height = 6, 
   #        dpi = 300)
+  rm(p_resid_fitted)
 }
 
 
@@ -259,6 +276,7 @@ create_qq_plot <- function(e_hat){
   #        width = 8, 
   #        height = 6, 
   #        dpi = 300)
+  rm(p_qq)
 }
 
 
@@ -274,11 +292,12 @@ create_pairs_plot <- function(dataframe){
    theme
   
   print(p_pairs)
-  ggsave("pairs_plot.jpg", 
-        p_pairs, 
-        width = 20, 
-        height = 20, 
-        dpi = 300)
+  # ggsave("pairs_plot.jpg", 
+  #       p_pairs, 
+  #       width = 20, 
+  #       height = 20, 
+  #       dpi = 300)
+  rm(p_pairs)
 }
 
 create_resid_fitted_plot(y_hat, e_hat)
@@ -341,11 +360,6 @@ We immediately see that the *Adjusted R-squared* is 0.5145, and the *p-value* is
 We see that some predictors had high p-values—we delve into this later.
 
 ```{r}
-# Create condition 2 plot
-pairs(RHP_FB0[,4:15])
-```
-
-```{r}
 di <- cooks.distance(fb_model)
 cutoff_di <- qf(0.5, 16, 1543)
 print(which(di > cutoff_di))
@@ -365,18 +379,6 @@ dfbetas <- dfbetas(fb_model)
 cutoff_dfbetas <- 7 / sqrt(1559)
 which(abs(dfbetas[,5]) > cutoff_dfbetas)
 print(RHP_FB0[RHP_FB0$release_pos_z < 6,])
-```
-
-
-```{r}
-hist(RHP_FB0$release_speed)
-hist(RHP_FB0$release_spin_rate)
-hist(RHP_FB0$release_extension)
-hist(RHP_FB0$release_pos_x)
-hist(RHP_FB0$release_pos_z)
-hist(RHP_FB0$ax)
-hist(RHP_FB0$az)
-hist(RHP_FB0$whiff)
 ```
 
 ```{r}
@@ -449,32 +451,7 @@ rm(RHP_FB0_temp)
 
 After filtering small count sizes, we observe no lines.
 
-We also observe no bias in the residuals, and no distinct skew/patterns.
-
-```{r}
-# Residual vs Predictor plots for each predictor variable
-plot(RHP_FB0$release_speed, e_hat, main="Residuals vs Release Speed", xlab="Release Speed", ylab="Residuals")
-plot(RHP_FB0$release_spin_rate, e_hat, main="Residuals vs Release Spin Rate", xlab="Release Spin Rate", ylab="Residuals")
-plot(RHP_FB0$release_extension, e_hat, main="Residuals vs Release Extension", xlab="Release Extension", ylab="Residuals")
-plot(RHP_FB0$release_pos_z, e_hat, main="Residuals vs Release Pos Z", xlab="Release Pos Z", ylab="Residuals")
-plot(RHP_FB0$release_pos_x, e_hat, main="Residuals vs Release Pos X", xlab="Release Pos X", ylab="Residuals")
-plot(RHP_FB0$plate_z, e_hat, main="Residuals vs Plate Z", xlab="Plate Z", ylab="Residuals")
-plot(RHP_FB0$plate_x, e_hat, main="Residuals vs Plate X", xlab="Plate X", ylab="Residuals")
-plot(RHP_FB0$ax, e_hat, main="Residuals vs Ax", xlab="Ax", ylab="Residuals")
-plot(RHP_FB0$az, e_hat, main="Residuals vs Az", xlab="Az", ylab="Residuals")
-plot(RHP_FB0$pfx_x, e_hat, main="Residuals vs Pfx X", xlab="Pfx X", ylab="Residuals")
-plot(RHP_FB0$pfx_z, e_hat, main="Residuals vs Pfx Z", xlab="Pfx Z", ylab="Residuals")
-```
-
-
-```{r}
-# Create QQ plot
-qqnorm(e_hat)
-qqline(e_hat)
-```
-
-Description
-
+We also observe no bias in the residuals, and no distinct skew/patterns after the transformation.
 
 Earlier, we noticed that some predictors appeared to be statistically insignificant—*release_pos_x* and *ax*.
 
@@ -631,7 +608,6 @@ Description
 
 -   Create a whiff rate prediction for each individual pitch
 -   Aggregate the predictions, and the actual results for each pitcher, each year
--   Filter pitchers with too few results (We decided to use count \> 50 as that removes all the whiff = 0; In MLB, pitchers regularily throw 1000+ pitches throughout the season.)
 
 ```{r}
 # Create predictions for whiff rate
@@ -655,7 +631,7 @@ remove(fb_model_updated)
 ## Task 6: Final Diagnostics and Analysis
 
 -   Use a linear model between prediction and actual to analyze the results
-    -   We will use a weighted linear model as some pitchers have thrown more pitches than others
+-   We will use a weighted linear model as some pitchers have thrown more pitches than others
 
 ```{r}
 # Fit a linear model between predicted and actual whiff rates
@@ -690,7 +666,7 @@ create_qq_plot(e_hat)
 ```{r}
 # Filter data for left-handed pitchers (LHP) and four-seam fastballs (FF)
 # Filter for all swings and calculate whiff rates
-RHP_FB <- savant_data |>
+LHP_FB <- savant_data |>
   filter(p_throws == "R", pitch_type == "FF",
          description %in% c("hit_into_play", "swinging_strike", "foul", "foul_tip")) |>
   mutate(whiff = if_else(description == "swinging_strike", 1, 0))
