--- a/Main.rmd
+++ b/Main.rmd
@@ -15,7 +15,7 @@ output: pdf_document
 -   **Task 4:** Update Linear Model
 -   **Task 5:** Predictions
 -   **Task 6:** Final Diagnostics and Analysis
-
+# Analysis on right-handed pitcher
 ## Task 0: Setup
 
 ```{r}
@@ -210,7 +210,7 @@ create_resid_vs_pred_plot <- function(dataframe, filename, e_hat){
                    gp = gpar(fontsize = 20, fontface = "bold"))
   )
   
-  # Saved as residual_plots.jpg in the working directory
+  # Saved as filename in the working directory
   ggsave(filename, 
         combined_plot, 
         width = 15, 
@@ -258,7 +258,6 @@ create_resid_fitted_plot <- function(y_hat, e_hat){
   rm(p_resid_fitted)
 }
 
-
 # Normal Q-Q plot
 create_qq_plot <- function(e_hat){
   p_qq <- ggplot(data.frame(residuals = e_hat), aes(sample = residuals)) +
@@ -279,7 +278,6 @@ create_qq_plot <- function(e_hat){
   rm(p_qq)
 }
 
-
 create_pairs_plot <- function(dataframe){
   predictors_df <- dataframe[, c("release_speed", "release_spin_rate", "release_extension", 
                               "release_pos_z", "release_pos_x", "plate_z", "plate_x",
@@ -297,7 +295,7 @@ create_pairs_plot <- function(dataframe){
   #       width = 20, 
   #       height = 20, 
   #       dpi = 300)
-  rm(p_pairs)
+  rm(p_pairs, predictors_df)
 }
 
 create_resid_fitted_plot(y_hat, e_hat)
@@ -388,68 +386,6 @@ e_hat <- resid(fb_model)
 plot(x = y_hat, y = e_hat, main = "Residual vs Fitted", xlab = "Fitted", ylab = "Residuals")
 
 ```
-
-We immediately notice the 3 distinct lines in the residual plot.
-
-To this, we hypothesize the following:
-
--   The whiff variable is derived as the proportion of swinging strikes (swinging_strike) within grouped data (group_by). Since whiff is calculated as the mean of a binary variable, it can only take on discrete values when grouped over small count sizes.
--   For instance, if there are only 3 pitches in a group, whiff can only take values of 0, 1/3, 2/3, 1. This creates "discrete jumps" in the residuals and leads to the horizontal bands in the plot.
-
-```{r}
-# Temporarily filter data points
-par(mfrow = c(1,3))
-
-# Count >= 4
-RHP_FB0_temp <- RHP_FB0 |>
-  filter(count > 3)
-fb_model_temp <- lm(whiff ~ 
-                 stand + release_speed + release_spin_rate +
-                 release_extension + release_pos_z + 
-                 release_pos_x + plate_x + plate_z + 
-                 ax + az + pfx_x + pfx_z + 
-                 stand:release_pos_x + stand:ax + stand:plate_x,
-               data = RHP_FB0_temp, weights = count)
-y_hat_temp <- fitted(fb_model_temp)
-e_hat_temp <- resid(fb_model_temp)
-plot(x = y_hat_temp, y = e_hat_temp, main = "Residual vs Fitted", xlab = "Fitted")
-
-# Count >= 16
-RHP_FB0_temp <- RHP_FB0 |>
-  filter(count >= 16)
-fb_model_temp <- lm(whiff ~ 
-                 stand + release_speed + release_spin_rate +
-                 release_extension + release_pos_z + 
-                 release_pos_x + plate_x + plate_z + 
-                 ax + az + pfx_x + pfx_z + 
-                 stand:release_pos_x + stand:ax + stand:plate_x,
-               data = RHP_FB0_temp, weights = count)
-y_hat_temp <- fitted(fb_model_temp)
-e_hat_temp <- resid(fb_model_temp)
-plot(x = y_hat_temp, y = e_hat_temp, main = "Residual vs Fitted", xlab = "Fitted")
-
-# Count >= 64
-RHP_FB0_temp <- RHP_FB0 |>
-  filter(count >= 64)
-fb_model_temp <- lm(whiff ~ 
-                 stand + release_speed + release_spin_rate +
-                 release_extension + release_pos_z + 
-                 release_pos_x + plate_x + plate_z + 
-                 ax + az + pfx_x + pfx_z + 
-                 stand:release_pos_x + stand:ax + stand:plate_x,
-               data = RHP_FB0_temp, weights = count)
-y_hat_temp <- fitted(fb_model_temp)
-e_hat_temp <- resid(fb_model_temp)
-plot(x = y_hat_temp, y = e_hat_temp, main = "Residual vs Fitted", xlab = "Fitted")
-
-
-# Cleanup
-rm(fb_model_temp)
-rm(RHP_FB0_temp)
-
-```
-
-After filtering small count sizes, we observe no lines.
 
 We also observe no bias in the residuals, and no distinct skew/patterns after the transformation.
 
@@ -661,13 +597,277 @@ create_resid_fitted_plot(y_hat, e_hat)
 create_qq_plot(e_hat)
 ```
 
-## Analysis on left-handed pitcher
+# Analysis on left-handed pitcher
+## Data Cleaning
 
 ```{r}
 # Filter data for left-handed pitchers (LHP) and four-seam fastballs (FF)
 # Filter for all swings and calculate whiff rates
 LHP_FB <- savant_data |>
-  filter(p_throws == "R", pitch_type == "FF",
+  filter(p_throws == "L", pitch_type == "FF",
          description %in% c("hit_into_play", "swinging_strike", "foul", "foul_tip")) |>
   mutate(whiff = if_else(description == "swinging_strike", 1, 0))
 ```
+
+```{r}
+# Remove incomplete data points (NA's)
+
+LHP_FB0 <- LHP_FB |>
+  filter(
+    !is.na(stand), 
+    !is.na(release_speed),
+    !is.na(release_spin_rate), 
+    !is.na(release_extension),
+    !is.na(release_pos_z), 
+    !is.na(release_pos_x),
+    !is.na(plate_z), 
+    !is.na(plate_x),
+    !is.na(ax), 
+    !is.na(az),
+    !is.na(pfx_x), 
+    !is.na(pfx_z)
+  ) |>
+  group_by(player_name, game_year, stand) |>
+  summarise(release_speed = mean(release_speed),
+            release_spin_rate = mean(release_spin_rate),
+            release_extension = mean(release_extension),
+            release_pos_x = mean(release_pos_x),
+            release_pos_z = mean(release_pos_z),
+            plate_z = mean(plate_z),
+            plate_x = mean(plate_x),
+            ax = mean(ax),
+            az = mean(az),
+            pfx_x = mean(pfx_x),
+            pfx_z = mean(pfx_z),
+            whiff = mean(whiff),
+            count = n(),
+            .groups="drop") |>
+     filter(162 < count)
+responses <- LHP_FB0$whiff
+```
+## Initial Model
+```{r}
+# Fit the initial linear model
+fb_model <- lm(whiff ~ 
+                 # Predictors
+                 stand + release_speed + release_spin_rate +
+                 release_extension + release_pos_z + 
+                 release_pos_x + plate_x + plate_z + 
+                 ax + az + pfx_x + pfx_z + 
+                 # Interaction terms
+                 stand:release_pos_x + stand:ax + stand:plate_x,
+               data = LHP_FB0, weights = count)
+e_hat <- resid(fb_model)
+y_hat <- fitted(fb_model)
+```
+
+## Data Visualization
+```{r}
+# Response variable distribution
+create_response_hist(responses)
+```
+
+```{r}
+# Residuals vs all predictors
+create_resid_vs_pred_plot(LHP_FB0, "residual_plots_LHP.jpg", e_hat)
+```
+
+```{r}
+# Residuals vs fitted values
+create_resid_fitted_plot(y_hat, e_hat)
+# Normal Q-Q plot
+create_qq_plot(e_hat)
+# create_pairs_plot(LHP_FB0)
+```
+
+## Variable Transformation
+```{r}
+summary(powerTransform(cbind(LHP_FB0[,15])))
+```
+
+```{r}
+# Transform our response variable and do another filter for release pos z (due to special case of a person's (Adam Cimber) pitch specialty of throwing ball as low as possible)
+LHP_FB0 <- LHP_FB0 |> 
+        mutate(whiff = whiff^(1/2)) |> 
+        filter(release_pos_z > 5)
+responses <- LHP_FB0$whiff
+
+# Rebuild our model with transformed data
+fb_model <- lm(whiff ~ 
+                 # Predictors
+                 stand + release_speed + release_spin_rate +
+                 release_extension + release_pos_z + 
+                 release_pos_x + plate_x + plate_z + 
+                 ax + az + pfx_x + pfx_z + 
+                 # Interaction terms
+                 stand:release_pos_x + stand:ax + stand:plate_x,
+               data = LHP_FB0, weights = count)
+
+e_hat <- resid(fb_model)
+y_hat <- fitted(fb_model)
+```
+
+```{r}
+# Response variable distribution of transformed data
+create_response_hist(responses)
+# Residuals vs fitted values for model with transformed data
+create_resid_fitted_plot(y_hat, e_hat)
+# QQ-plot for model with transformed data
+create_qq_plot(e_hat)
+```
+
+```{r}
+# Perform VIF test
+vif(fb_model)
+```
+
+```{r}
+# Fit temporary model without release_pos_x
+fb_model_temp <- lm(whiff ~ 
+                 stand + release_speed + release_spin_rate +
+                 release_extension + release_pos_z + 
+                 plate_x + plate_z + 
+                 ax + az + pfx_x + pfx_z + 
+                 stand:ax + stand:plate_x,
+               data = LHP_FB0, weights = count)
+e_hat_temp <- resid(fb_model_temp) 
+y_hat_temp <- fitted(fb_model_temp) 
+```
+
+```{r}
+# Check for any assumptions violated
+create_resid_fitted_plot(y_hat_temp, e_hat_temp)
+create_qq_plot(e_hat_temp)
+```
+
+```{r}
+# Perform ANOVA test
+anova(fb_model_temp, fb_model)
+```
+
+```{r}
+# Fit temporary model without stand:release_pos_x
+fb_model_temp <- lm(whiff ~ 
+                 stand + release_speed + release_spin_rate +
+                 release_extension + release_pos_z + 
+                 release_pos_x + plate_x + plate_z + 
+                 ax + az + pfx_x + pfx_z + 
+                 stand:ax + stand:plate_x,
+               data = LHP_FB0, weights = count)
+
+e_hat_temp <- resid(fb_model_temp) 
+y_hat_temp <- fitted(fb_model_temp) 
+# coefficients, correlation, and statistical significance
+summary(fb_model_temp)
+```
+
+```{r}
+# Check for any assumptions violated
+create_resid_fitted_plot(y_hat_temp, e_hat_temp)
+create_qq_plot(e_hat_temp)
+```
+
+```{r}
+# Perform VIF test
+vif(fb_model_temp)
+
+```
+
+```{r}
+# Fit temporary model without pfx_x, pfx_z
+fb_model_temp <- lm(whiff ~ 
+                 stand + release_speed + release_spin_rate +
+                 release_extension + release_pos_z + release_pos_x + plate_z +
+                 plate_x + ax + az +
+                 release_pos_x + stand:plate_x + stand:ax,
+               data = LHP_FB0, weights = count)
+
+e_hat_temp <- resid(fb_model_temp) 
+y_hat_temp <- fitted(fb_model_temp) 
+# coefficients, correlation, and statistical significance
+summary(fb_model_temp)
+```
+
+```{r}
+# Check for any assumptions violated
+create_resid_fitted_plot(y_hat_temp, e_hat_temp)
+create_qq_plot(e_hat_temp)
+```
+
+```{r}
+# Perform VIF test
+vif(fb_model_temp)
+
+# Perform Partial F test
+anova(fb_model_temp, fb_model)
+
+```
+
+```{r}
+# Rename
+fb_model_updated <- fb_model_temp
+
+# Remove old model to clean up workspace
+rm(fb_model)
+rm(fb_model_temp)
+```
+
+```{r}
+# Residual vs Fitted plot
+y_hat <- fitted(fb_model_updated)
+e_hat <- resid(fb_model_updated)
+create_resid_fitted_plot(y_hat, e_hat)
+# Create QQ plot
+create_qq_plot(e_hat)
+
+# Create condition 2 plot
+create_pairs_plot(LHP_FB0)
+```
+
+```{r}
+# Create predictions for whiff rate
+Predict_LHP_FB0 <- LHP_FB0 |>
+  ungroup() |>
+  mutate(est_whiff = predict(fb_model_updated, newdata = LHP_FB0))
+
+# Group predictions by player and year
+Final <- Predict_LHP_FB0 |>
+  group_by(player_name, game_year) |>
+  summarise(new_count = sum(count),
+            whiff = sum(whiff * count) / sum(count),
+            est_whiff = sum(est_whiff * count) / sum(count))
+
+# Clean up workspace
+remove(LHP_FB0)
+remove(Predict_LHP_FB0)
+remove(fb_model_updated)
+```
+
+```{r}
+# Fit a linear model between predicted and actual whiff rates
+Final_lm <- lm(whiff ~ est_whiff, data = Final, weights = new_count)
+
+# Summary of the final model
+summary(Final_lm)
+
+# Plot predicted vs actual whiff rate
+ggplot(Final, aes(x = est_whiff, y = whiff)) +
+  geom_point(color = "blue", alpha = 0.6, size = 2) +
+  geom_abline(intercept = 0, slope = 1, linetype = "solid", color = "black") +
+  labs(
+    title = "Predicted vs Actual Whiff Rate for Pitchers",
+    x = "Estimated Whiff Rate (Predicted)",
+    y = "Actual Whiff Rate"
+  ) +
+  theme
+```
+
+```{r}
+y_hat <- resid(Final_lm)
+e_hat <- fitted(Final_lm)
+# Residual vs Fitted plot
+create_resid_fitted_plot(y_hat, e_hat)
+# Create QQ plot
+create_qq_plot(e_hat)
+```
+
